Add developer credit for Ritik Pareek in Footer